sterlang/examples/neg/src/neg.app.src
{application, neg, [
    {description, "neg"},
    {vsn, "0.0.0"},
    {registered, []},
    {applications, [kernel, stdlib]},
    {env, []},
    {modules, []},
    {licenses, []},
    {links, []},
    {exclude_files, []}
]}.
